--- a/rss12humanoids.tex
+++ b/rss12humanoids.tex
@@ -29,7 +29,7 @@
 
 \begin{document}
 
-\title{Reliable Indoor Navigation on the HRP-2 Humanoid Robot using
+\title{Reliable Indoor Navigation on Humanoid Robots using
   Vision-Based Localization}
 
 % You will get a Paper-ID when submitting a pdf file to the conference system
