Update paper for ICRA submission.

--- a/12icra.tex
+++ b/12icra.tex
@@ -23,9 +23,13 @@
 
 % Commands and other stuff
 \DeclareMathOperator*{\argmin}{arg\,min}
-\newcommand{\PFA}[1]{{\color{red}\fbox{PFA:} #1}}
-\newcommand{\TM}[1]{{\color{blue}\fbox{TM:} #1}}
-\newcommand{\OS}[1]{{\color{green}\fbox{OS:} #1}}
+%\newcommand{\PFA}[1]{{\color{red}\fbox{PFA:} #1}}
+%\newcommand{\TM}[1]{{\color{blue}\fbox{TM:} #1}}
+%\newcommand{\OS}[1]{{\color{green}\fbox{OS:} #1}}
+
+\newcommand{\PFA}[1]{}
+\newcommand{\TM}[1]{}
+\newcommand{\OS}[1]{}
 
 \begin{document}
 
