--- a/src/introduction.tex
+++ b/src/introduction.tex
@@ -31,7 +31,7 @@ where no encoder based reliable odometry exists.
 %
 \begin{figure}[ht]
   \begin{center}
-    \includegraphics[width=.9\linewidth]{images/demo1.JPG}
+    \includegraphics[width=.9\linewidth]{images/demo1.jpg}
   \end{center}
   \caption{HRP-2 dropping a ball on a shelf after having navigated through an indoor environment. Navigation followed by manipulation are typical scenarios where walking drift can prevent a task from being accomplished.\label{fig:xp_final}}
 \end{figure}
