--- a/12icra.tex
+++ b/12icra.tex
@@ -24,6 +24,19 @@
 
 \usepackage[squaren, Gray, cdot]{SIunits}
 
+
+
+
+\title{\LARGE \bf Reliable Indoor Navigation on Humanoid Robots\\
+  using Vision-Based Localization}
+%
+\author{Thomas Moulard$^{1}$, Pablo Alcantarilla$^{2}$, Florent Lamiraux$^{1}$, Olivier Stasse$^{1}$, Frank Dellaert$^{3}$%
+\thanks{$^{1} $T.\ Moulard, F.\ Lamiraux, O.\ Stasse are with LAAS-CNRS; 7, avenue du Colonel Roche 31077 Toulouse France {\tt\small thomas.moulard at gmail.com}}%
+\thanks{$^{2}$ P.\ Alcantarilla is with Advanced Laparoscopy and Computer Vision Group (ALCoV), University d'Auvergne, Clermont-Ferrand, France {\tt\small pablofdezalc at gmail.com}}%
+\thanks{$^{3}$ F.\ Dellaert is with School of Interactive Computing, Georgia Institute of Technology, Atlanta, GA 30332, USA. {\tt\small dellaert at cc.gatech.edu}}%
+}
+
+
 % Commands and other stuff
 \DeclareMathOperator*{\argmin}{arg\,min}
 %\newcommand{\PFA}[1]{{\color{red}\fbox{PFA:} #1}}
@@ -34,18 +47,7 @@
 \newcommand{\TM}[1]{}
 \newcommand{\OS}[1]{}
 
-\title{\LARGE \bf Reliable Indoor Navigation on Humanoid Robots using
-  Vision-Based Localization}
-%
-\author{Thomas Moulard$^{1}$, Pablo Alcantarilla$^{2}$, Florent Lamiraux$^{1}$, Olivier Stasse$^{1}$, Frank Dellaert$^{3}$}%
-\thanks{$^{1}$T. Moulard, F. Lamiraux, O. Stasse are with LAAS-CNRS,%
-  7, avenue du Colonel Roche 31077 Toulouse CEDEX 04%
-  {\tt\small thomas.moulard at gmail.com}}%
-\thanks{$^{2}$ FIXME {\tt\small fixme at fixme.com}}%
-\thanks{$^{3}$ FIXME {\tt\small fixme at fixme.com}}%
-%
 \begin{document}
-
 \maketitle
 \thispagestyle{empty}
 \pagestyle{empty}
