Prepare ICRA submission.

--- a/references.bib
+++ b/references.bib
@@ -213,6 +213,13 @@
    year = {2011}
 }
 
+@article{Alcantarilla12auro,
+  author = {P.F. Alcantarilla and O. Stasse and S. Druon and L.M. Bergasa and F. Dellaert},
+  title = {How to Localize Humanoids with a Single Camera?},
+  journal = AR,
+  year = {2012}
+ }
+ 
 @article{Ansar03pami,
   author = {A. Ansar and K. Danilidis},
   title = {\href{http://ieeexplore.ieee.org/xpl/freeabs_all.jsp?arnumber=1195992}{Linear Pose Estimation from Points or Lines}},
